tests/invalid/set_magic_len_wrong_arg_count/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    n: int = s.__len__(1)
    print(n)


if __name__ == "__main__":
    run_case()
